--- a/index.html
+++ b/index.html
@@ -10,41 +10,49 @@
   <title>Sign Up</title>
 </head>
 <body>
-  <div class="container">
-    <div class="image">
-      <img src="./images/gold.png" alt="" >
+  <div class="main">
+    <div class="container">
+      <div class="image">
+        <img src="./images/gold.png" alt="" >
+      </div>
+      <form action="/" class="form">
+        <div class="heading">CREATE ACCOUNT</div>
+        <div class="layer1">
+          <label for="firstName">FIRST NAME</label>
+          <input type="text" id="firstName">
+          <div class="error">..</div>
+        </div>
+        <div class="layer2">
+          <label for="lastName">LAST NAME</label>
+          <input type="text" id="lastName" >
+          <div class="error">..</div>
+        </div>
+        <div class="layer3">
+          <label for="email">EMAIL</label>
+          <input type="email" id="email" autocomplete="email">
+          <div class="error">..</div>
+        </div>
+        <div class="layer4">
+          <label for="phone">PHONE NUMBER</label>
+          <input type="tel" id="phone" autocomplete="tel" >
+          <div class="error">..</div>
+        </div>
+        <div class="layer5">
+          <label for="pass1">PASSWORD</label>
+          <input type="password" id="pass1">
+          <div class="error">..</div>
+        </div>
+        <div class="layer6">
+          <label for="pass2">CONFIRM PASSWORD</label>
+          <input type="password" id="pass2">
+          <div class="error">..</div>
+        </div>
+        <div>
+          <input type="submit" value="SIGN UP" class="btn">
+        </div>
+        <a href="https://github.com/notsanta20" target="_blank" class="link">Already have an account? Log in</a>
+      </form>
     </div>
-    <form action="/" method="get" class="form">
-      <div class="heading">CREATE ACCOUNT</div>
-      <div class="layer1">
-        <label for="firstName">FIRST NAME</label>
-        <input type="text" id="firstName"  minlength="3" maxlength="32" required >
-      </div>
-      <div class="layer2">
-        <label for="lastName">LAST NAME</label>
-        <input type="text" id="lastName"  minlength="3" maxlength="32" required >
-      </div>
-      <div class="layer3">
-        <label for="email">EMAIL</label>
-        <input type="email" id="email" required autocomplete="email">
-      </div>
-      <div class="layer4">
-        <label for="phone">PHONE NUMBER</label>
-        <input type="tel" id="phone" required autocomplete="tel" >
-      </div>
-      <div class="layer5">
-        <label for="pass1">PASSWORD</label>
-        <input type="password" id="pass1" required>
-      </div>
-      <div class="layer6">
-        <label for="pass2">CONFIRM PASSWORD</label>
-        <input type="password" id="pass2" required>
-      </div>
-      <div>
-        <input type="submit" value="SIGN UP" class="btn">
-      </div>
-      <a href="https://github.com/notsanta20" target="_blank" class="link">Already have an account? Log in</a>
-    </form>
   </div>
   <script src="script.js"></script>
 </body>
